# ainby

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_ainby.yml
data/: CMakeLists.txt
libs/: CMakeLists.txt
src/: CMakeLists.txt  ainby.cpp  ainby.hpp  ainby_imgui_config.h  main.cpp  types.h
src/ainb_editor/: ainb_editor.cpp  ainb_editor.hpp  ainb_node.cpp  ainb_node.hpp  pin_icons.cpp  pin_icons.hpp
src/file_formats/: ainb.cpp  ainb.hpp  sarc.cpp  sarc.hpp  zstd.cpp  zstd.hpp
src/node_editor/: LICENSE
